# hash-browns

./: .gitignore  Dockerfile  README.md  data_manifest.yml  justfile  main.nf  nextflow.config  pyproject.toml  refman.toml
.github/workflows/: docker-image.yaml
conf/: user-settings.mkfg
modules/: bbmap.nf  blast.nf  gottcha.nf  labkey.nf  minimap2.nf  multiqc.nf  nanoq.nf  ncbi.nf  refman.nf  scidataflow.nf  seqfu.nf  seqkit.nf  sourmash.nf  spades.nf  stat.nf  sylph.nf  utils.nf
subworkflows/: gottcha2_workflow.nf  kmcp_workflow.nf  nvd.nf  sourmash_workflow.nf  strobealign_workflow.nf  sylph_workflow.nf
workflows/: classification.nf  downloads.nf  gather_illumina.nf  quality_control.nf
